--- a/index.html
+++ b/index.html
@@ -208,13 +208,13 @@
                             <!-- Quote -->
                             <blockquote class="blockquote mb-0">
                                 <p id="about-quote">
-                                    真正的成功，不在贏過多少人
-                                <br/>而在與多少人分享，幫過多少人
+                                    學校與老師著重教學，如何引導孩子學習才是現階段最重要的事
+                                <br/>所以必須指導孩子如何學習
                             
                                 </p>
                                 <footer class="blockquote-footer">
                                     校長
-                                <cite title="Source Title">林芳如</cite>
+                                <cite title="Source Title">郭添財</cite>
                                 </footer>
                             </blockquote>
                         </div>
