--- a/index.html
+++ b/index.html
@@ -194,15 +194,19 @@
                         <div class="card-body">
                             <h2 class="my-3">關於新湖</h2>
                             <p class="ready-to-appear2">
-                                結緣新湖，耕耘幸福
+                                （一）多元學習課程 開創孩子逐夢的信心
                             <br/>
-                                走進新湖，遇見新湖
+                                （二）健康磐石活動 促進孩子健全的身心 
                             <br/>
-                                優質團隊，邁向新湖
+                                （三）深耕閱讀活動 厚植孩子語文的基礎 
                             <br/>
-                                愛在新湖，代代相傳
-                            <br/>優質新湖，創造幸福
-                        
+                                （四）強化情意教育 發展孩子良好的品格 
+                            <br/>
+                                （五）紮實課程教學 培養孩子基礎的學力
+                            <br/>
+                                （六）發揮教育關懷 引導孩子適性的發展 
+                            <br/>
+                                （七）家長正向參與 開啟親師生三贏文化
                             </p>
                             <hr class="div-hr my-3"/>
                             <!-- Quote -->
