--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <div class="row align-items-center justify-content-center">
                     <!-- Photo -->
                     <div class="col-md-auto d-none d-md-block">
-                        <img class="img-fluid" src="src/home/3_top.jpg"/>
+                        <img class="img-fluid" src="src/home/3_top1.jpg"/>
                     </div>
                     <!-- Text -->
                     <div class="col-auto">
