--- a/index.html
+++ b/index.html
@@ -283,9 +283,9 @@
                         <div class="col-auto">
                             <div class="card">
                                 <div class="card-body  text-left">
-                                    <h5 class="card-title">活動影片專區</h5>
+                                    <h5 class="card-title">新湖活動花絮專區</h5>
                                     <p class="card-subtitle  ready-to-appear2 pt-3">精彩的瞬間、美好的回憶</p>
-                                    <a class="btn btn-primary btn-lg mt-1 mt-md-3" href="gallery.html" role="button" target="_blank">
+                                    <a class="btn btn-primary btn-lg mt-1 mt-md-3" href="https://www.shes.tp.edu.tw/nss/s/main/album" role="button" target="_blank">
                                         觀賞去！
                                     <i class="fas fa-sign-in-alt"></i>
                                     </a>                                    
