--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-hans">
     <head>
-        <title>台北市內湖區新湖國小</title>
+        <title>臺北市內湖區新湖國小</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="keywords" content="Xinhu Elementary School, 新湖國小, 數位專區">
@@ -42,14 +42,14 @@
                     <li class="nav-item">
                         <a class="nav-link py-3" href="#gallery-div">
                             <i class="fas fa-images">
-                                <span class="text-zh">影片</span>
+                                <span class="text-zh">照片</span>
                             </i>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link py-3" href="#trophy-div">
                             <i class="fas fa-trophy">
-                                <span class="text-zh">獎盃</span>
+                                <span class="text-zh">活動中心</span>
                             </i>
                         </a>
                     </li>
@@ -89,14 +89,14 @@
                         <div class="col-sm-6 col-lg-3 my-1 ready-to-appear2">
                             <a role="button" class="btn btn-outline-light" href="#gallery-div">
                                 <i class="fas fa-images">
-                                    <span class="text-zh">影片</span>
+                                    <span class="text-zh">照片</span>
                                 </i>
                             </a>
                         </div>
                         <div class="col-sm-6 col-lg-3 my-1 ready-to-appear2">
                             <a role="button" class="btn btn-outline-light" href="#trophy-div">
                                 <i class="fas fa-trophy">
-                                    <span class="text-zh">獎盃</span>
+                                    <span class="text-zh">活動中心</span>
                                 </i>
                             </a>
                         </div>
@@ -143,7 +143,7 @@
                         <div class="parallax-window" data-speed="0.2" data-parallax="scroll" data-image-src="src/home/2_grid4.jpg" data-nature-width="800" data-nature-height="502" style="height: 100%;"></div>
                     </div>
                     <div id="grid-2_2-wrap" class="grid-stay grid-frame grid-40">
-                        <div class="parallax-window" data-speed="0.2" data-parallax="scroll" data-image-src="src/home/2_grid5.jpg" data-nature-width="600" data-nature-height="400" style="height: 100%;" data-position-x="center"></div>
+                        <div class="parallax-window" data-speed="0.2" data-parallax="scroll" data-image-src="src/home/2_grid11.jpg" data-nature-width="600" data-nature-height="400" style="height: 100%;" data-position-x="center"></div>
                         <div id="grid-2_2" class="background-div"></div>
                         <div id="intro-text4" class="center-block">
                             <p class="text-center">
@@ -351,7 +351,7 @@
         <!-- Trophy Division -->
         <div id="trophy-div" class="container-fluid">
             <div class="parallax-window" data-speed="0.2" data-parallax="scroll" data-image-src="src/home/5_cover.jpg" data-nature-width="1600" data-nature-height="899">
-                <h1 class="center-block ready-to-appear">獎盃專區</h1>
+                <h1 class="center-block ready-to-appear">活動中心專區</h1>
             </div>
             <div class="container-fluid pb-5">
                 <!-- Overview -->
@@ -370,7 +370,8 @@
                                 四大金剛，銳不可擋
                             <br/>
                                 潛力新秀，明日看我
-                            <br/>展現活力，齊心奪標
+                            <br/>
+                                展現活力，齊心奪標
                         
                             </p>
                             <hr class="div-hr my-3"/>
@@ -379,7 +380,7 @@
                             <br/>我們都珍惜小心的保存下來！
                         
                             </p>
-                            <a class="btn btn-primary btn-lg mt-1 mt-md-4" href="medal.html" target="_blank" role="button">
+                            <a class="btn btn-primary btn-lg mt-1 mt-md-4" href="https://sites.google.com/view/shesrisings/%E9%A6%96%E9%A0%81" target="_blank" role="button">
                                 觀賞去！
                             <i class="fas fa-sign-in-alt"></i>
                             </a>
