--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav id="top-nav" class="navbar navbar-expand-sm navbar-dark fixed-top px-3">
             <!-- Brand -->
             <a class="navbar-brand" href="#main-body">
-                <img id="brand-img" src="src/home/0_brand.png" class="d-inline-block" alt="brand-img"/>
+                <img id="brand-img" src="src/home/1_brand.png" class="d-inline-block" alt="brand-img"/>
                 <span id="brand-text"></span>
             </a>
             <!-- Toggler -->
@@ -350,7 +350,7 @@
         </div>
         <!-- Trophy Division -->
         <div id="trophy-div" class="container-fluid">
-            <div class="parallax-window" data-speed="0.2" data-parallax="scroll" data-image-src="src/home/5_cover.jpg" data-nature-width="1600" data-nature-height="899">
+            <div class="parallax-window" data-speed="0.2" data-parallax="scroll" data-image-src="src/home/5_2_cover.jpg" data-nature-width="1600" data-nature-height="899">
                 <h1 class="center-block ready-to-appear">活動中心專區</h1>
             </div>
             <div class="container-fluid pb-5">
@@ -358,7 +358,7 @@
                 <div id="trophy-overview" class="row align-items-end justify-content-center">
                     <!-- Photo -->
                     <div class="col-auto d-none d-md-block">
-                        <img class="img-fluid" src="src/home/5_img.jpg"/>
+                        <img class="img-fluid" src="src/home/5_2_img.jpg"/>
                     </div>
                     <!-- Text -->
                     <div class="col-auto">
