--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                 <div id="trophy-overview" class="row align-items-end justify-content-center">
                     <!-- Photo -->
                     <div class="col-auto d-none d-md-block">
-                        <img class="img-fluid" src="src/home/5_2_img.jpg"/>
+                        <img class="img-fluid" src="src/home/5_2_2_img.jpg"/>
                     </div>
                     <!-- Text -->
                     <div class="col-auto">
