--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
         </div>
         <!-- Trophy Division -->
         <div id="trophy-div" class="container-fluid">
-            <div class="parallax-window" data-speed="0.2" data-parallax="scroll" data-image-src="src/home/5_2_cover.jpg" data-nature-width="1600" data-nature-height="899">
+            <div class="parallax-window" data-speed="0.2" data-parallax="scroll" data-image-src="src/home/5_2_2_cover.jpg" data-nature-width="1600" data-nature-height="899">
                 <h1 class="center-block ready-to-appear">活動中心專區</h1>
             </div>
             <div class="container-fluid pb-5">
