--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
                                 </i>
                             </a>
                         </div>
-                        <div class="col-sm-8 col-lg-3 my-1 ready-to-appear2">
+                        <div class="col-sm-10 col-lg-3 my-1 ready-to-appear2">
                             <a role="button" class="btn btn-outline-light" href="#trophy-div">
-                                <i>
+                                <i class="fas fa-trophy">
                                     <span class="text-zh">活動中心</span>
                                 </i>
                             </a>
