--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             </a>
                         </div>
                         <div class="col-sm-12 col-lg-3 my-1 ready-to-appear2">
-                            <a role="button" class="btn btn-outline-light" style="width: 200px" href="#trophy-div">
+                            <a role="button" class="btn btn-outline-light" href="#trophy-div">
                                 <i class="fas fa-trophy">
                                     <span class="text-zh">活動中心</span>
                                 </i>
