--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         </div>
                         </div>
                     </div>
-                    <div id="grid-1_2" class="grid-discard grid-frame grid-20">
+                    <div id="grid-1_2" class="grid-discard grid-frame grid-20" style="background-image: url('src/home/2_grid13.jpg')">
                         <div id="intro-text2" class="center-block ready-to-appear">多元明星
                     </div>
                     </div>
@@ -164,7 +164,7 @@
                 </div>
                 <!-- 3nd Row -->
                 <div class="row grid-row">
-                    <div class="grid-stay grid-frame grid-20" style="background-image: url('src/home/2_grid7.jpg')"></div>
+                    <div class="grid-stay grid-frame grid-20" style="background-image: url('src/home/2_grid14.jpg')"></div>
                     <div class="grid-discard grid-frame grid-20">
                         <div id="intro-text5" class="center-block ready-to-appear">展望未來
                     </div>
