--- a/index.html
+++ b/index.html
@@ -164,9 +164,10 @@
                 </div>
                 <!-- 3nd Row -->
                 <div class="row grid-row">
-                    <div class="grid-stay grid-frame grid-20" style="background-image: url('src/home/2_grid14.jpg')"></div>
-                    <div class="grid-discard grid-frame grid-20">
-                        <div id="intro-text5" class="center-block ready-to-appear">展望未來
+                    <div class="grid-stay grid-frame grid-20" style="background-image: url('src/home/2_grid7.jpg')"></div>
+                    <div class="grid-discard grid-frame grid-20" style="background-image: url('src/home/2_grid14.jpg')">
+                        <div id="intro-text5" class="center-block ready-to-appear">
+                            <p class="text-center">展望未來 </p>
                     </div>
                     </div>
                     <div class="grid-discard grid-frame grid-20" style="overflow: hidden;">
