--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="zh-hans">
     <head>
-        <title>臺北市內湖區新湖國小</title>
+        <title>臺北市內湖區新湖國民小學</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="keywords" content="Xinhu Elementary School, 新湖國小, 數位專區">
+        <link rel="icon" href="src/home/1_brand_ico.ico">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/index.css">
@@ -15,7 +16,7 @@
         <nav id="top-nav" class="navbar navbar-expand-sm navbar-dark fixed-top px-3">
             <!-- Brand -->
             <a class="navbar-brand" href="#main-body">
-                <img id="brand-img" src="src/home/1_brand.png" class="d-inline-block" alt="brand-img"/>
+                <img id="brand-img" src="src/home/1_brand_ico.ico" class="d-inline-block" alt="brand-img"/>
                 <span id="brand-text"></span>
             </a>
             <!-- Toggler -->
