--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav id="top-nav" class="navbar navbar-expand-sm navbar-dark fixed-top px-3">
             <!-- Brand -->
             <a class="navbar-brand" href="#main-body">
-                <img id="brand-img" src="src/home/1_brand_ico.ico" class="d-inline-block" alt="brand-img"/>
+                <img id="brand-img" src="src/home/1_brand_png.png" class="d-inline-block" alt="brand-img"/>
                 <span id="brand-text"></span>
             </a>
             <!-- Toggler -->
