恢復獎盃專區

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <li class="nav-item">
                         <a class="nav-link py-3" href="#trophy-div">
                             <i class="fas fa-trophy">
-                                <span class="text-zh">活動中心</span>
+                                <span class="text-zh">獎盃</span>
                             </i>
                         </a>
                     </li>
@@ -97,7 +97,7 @@
                         <div class="col-sm-12 col-lg-3 my-1 ready-to-appear2">
                             <a role="button" class="btn btn-outline-light" href="#trophy-div">
                                 <i class="fas fa-trophy">
-                                    <span class="text-zh">活動中心</span>
+                                    <span class="text-zh">獎盃</span>
                                 </i>
                             </a>
                         </div>
@@ -349,6 +349,48 @@
                 </div>
             </div>
         </div>
+         <!-- Trophy Division -->
+        <div id="trophy-div" class="container-fluid">
+            <div class="parallax-window" data-speed="0.2" data-parallax="scroll" data-image-src="src/home/5_cover.jpg" data-nature-width="1600" data-nature-height="899">
+                <h1 class="center-block ready-to-appear">獎盃專區</h1>
+            </div>
+            <div class="container-fluid pb-5">
+                <!-- Overview -->
+                <div id="trophy-overview" class="row align-items-end justify-content-center">
+                    <!-- Photo -->
+                    <div class="col-auto d-none d-md-block">
+                        <img class="img-fluid" src="src/home/5_img.jpg"/>
+                    </div>
+                    <!-- Text -->
+                    <div class="col-auto">
+                        <div class="card-body">
+                            <h2 class="my-3">新湖爭光 捨我其誰</h2>
+                            <p class="ready-to-appear2">
+                                四大金釵，不讓鬚眉
+                            <br/>
+                                四大金剛，銳不可擋
+                            <br/>
+                                潛力新秀，明日看我
+                            <br/>展現活力，齊心奪標
+                            <br/>
+                                展現活力，齊心奪標
+
+                            </p>
+                            <hr class="div-hr my-3"/>
+                            <h2 class="my-3">新湖爭光 捨我其誰</h2>
+                            <br/>我們都珍惜小心的保存下來！
+                            </p>
+                            <a class="btn btn-primary btn-lg mt-1 mt-md-4" href="medal.html" target="_blank" role="button">
+                            <a class="btn btn-primary btn-lg mt-1 mt-md-4" href="https://sites.google.com/view/shesrisings/%E9%A6%96%E9%A0%81" target="_blank" role="button">
+                                觀賞去！
+                            <i class="fas fa-sign-in-alt"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+          
         <!-- Trophy Division -->
         <div id="trophy-div" class="container-fluid">
             <div class="parallax-window" data-speed="0.2" data-parallax="scroll" data-image-src="src/home/5_2_cover.jpg" data-nature-width="1600" data-nature-height="899">
@@ -356,7 +398,7 @@
             </div>
             <div class="container-fluid pb-5">
                 <!-- Overview -->
-                <div id="trophy-overview" class="row align-items-end justify-content-center">
+                <div id="trophy-overview1" class="row align-items-end justify-content-center">
                     <!-- Photo -->
                     <div class="col-auto d-none d-md-block">
                         <img class="img-fluid" src="src/home/5_2_3_img.jpg"/>
