--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                             <h2 class="my-3">新湖爭光 捨我其誰</h2>
                             <br/>我們都珍惜小心的保存下來！
                             </p>
-                            <a class="btn btn-primary btn-lg mt-1 mt-md-4" href="https://sites.google.com/view/shesrisings/%E9%A6%96%E9%A0%81" target="_blank" role="button">
+                            <a class="btn btn-primary btn-lg mt-1 mt-md-4" href="medal.html" target="_blank" role="button">
                                 觀賞去！
                             <i class="fas fa-sign-in-alt"></i>
                             </a>
