--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                 <!-- Title -->
                 <div class="text-center">
                     <div id="landing-text-title">
-                        <h1 id="landing-zh">新湖國民小學</h1>
-                        <h2 id="landing-eng">Xinhu Elementary School</h2>
+                        <h1 id="landing-zh">臺北市內湖區新湖國民小學</h1>
+                        <h2 id="landing-eng">Taipei Municipal Xinhu Elementary School</h2>
                     </div>
                 </div>
                 <!-- Button Group -->
@@ -218,8 +218,7 @@
                             
                                 </p>
                                 <footer class="blockquote-footer">
-                                    校長
-                                <cite title="Source Title">郭添財</cite>
+                                    <cite title="Source Title">校長 郭添財</cite>
                                 </footer>
                             </blockquote>
                         </div>
@@ -444,15 +443,21 @@
                         <!-- Content -->
                             <a href="src/home/新湖20周年專刊.pdf" download="新湖20周年專刊.pdf">新湖20周年專刊</a><br>
                             <a href="src/home/新湖30周年專刊.pdf" download="新湖30周年專刊.pdf">新湖30周年專刊</a><br><br>
-                        <h4>建校緣起</h4>
-                        <p class="ready-to-appear2">內湖區環境優美，自民國66年解除禁建，建築業蓬勃興起，人口劇增；從民國57年之四萬餘人增至民國76年之十七萬餘人，以致區內學校容量不足以容納驟增之學童，乃有興建本校之議。</p>
+                        <h4>建校源起</h4>
+                        <p class="ready-to-appear2">內湖區環境優美自民國66年解除禁建，建築業蓬勃興起人口劇增，從民國57年之四萬餘人增至民國76年之十七萬餘人，以致區內學校容量不足以容納驟增之學童，乃有興建本校之議。<br/>
+                            民國75年完成土地徵收作業，76年初辦理相關地上物拆遷補償作業，並於當年年底完成校舍徵圖。民國76年7月3日奉臺北市政府核定成立「新湖國小籌備處」並核派賴添福先生於民國76年8月11日出任籌備處主任。籌備處辦公室設在松山區三民國小。民國76年9月16日恭請臺北市政府教育局程督學貞樸主持掛牌儀式，校舍工程於78年發包及開工，80年初土木及水電工程陸續完工。歷任校長致力追求教育品質的提昇，逐年擴充學校各項軟硬體設施，陸續充實視聽教學及電腦教學設備，完成音樂、美勞、科學教室整修，廁所整修、裝設戶外球場夜間照明、學童午餐配膳室、午餐電梯及裝設改善航空噪音的隔音門窗及空調設備、永續校園太陽能路燈暨雨水回收澆灌設施、操場跑道球場及其周邊相關設施修建工程設施等。
+                            <br/>本校活動中心於112年興建完成並於同年12月舉辦啟用典禮，除了供本校師生上課或舉辦活動使用外，亦於平日下課時間、休假日期間供民眾租借舉辦活動或運動之用。
+                        </p>
                         <hr class="div-hr my-3"/>
-                        <h4>籌備成立</h4>
-                        <p class="ready-to-appear2">本校於民國76年7月3日奉臺北市政府核定成立「新湖國小籌備處」。並核派賴添福先生於民國76年8月11日出任籌備處主任。籌備處辦公室設在松山區三民國小。民國76年9月16日恭請臺北市政府教育局程督學貞樸主持掛牌儀式。</p>
-                        <hr class="div-hr my-3"/>
-                        <h4>創校及建設</h4>
-                        <p class="ready-to-appear2">民 國75年完成土地徵收作業，76年初辦理相關地上物拆遷補償作業，年底完成校舍徵圖。校舍工程於78年發包及開工，80年初土木及水電工程陸續完工。歷任 校長致力追求教育品質的提昇，逐年擴充學校各項軟硬體設施，陸續充實視聽教學及電腦教學設備，完成音樂、美勞、科學教室整修，廁所整修、裝設戶外球場夜間
-                        照明、學童午餐配膳室、午餐電梯及裝設改善航空噪音的隔音門窗及空調設備、永續校園太陽能路燈暨雨水回收澆灌設施、操場跑道球場及其周邊相關設施修建工程 設施等。</p>
+                        <h4>歷任校長及現任校長</h4>
+                        <p class="ready-to-appear2">80年7月1日賴添福校長為本校首任校長。<br/>
+                            85年8月6日曾雪娥校長接任本校第二任校長。<br/>
+                            94年8月1日廖文斌校長接任本校第三任校長。<br/>
+                            101年8月1日連德盛校長接任本校第四任校長<br/>
+                            102年教務主任李家旭代理本校校長接任第五任校長。<br/>
+                            103年8月1日林芳如校長接任本校第六任校長。<br/>
+                            111年8月1日郭添財校長接任本校第七任校長至今。
+                        </p>
                     </div>
                 </div>
             </div>
