修改校史專區、照片、LOGO

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
             <div class="center-block">
                 <!-- Title -->
                 <div class="text-center">
+                
+                        <img src="src/home/LOGO1.jpg"/>
+                    
                     <div id="landing-text-title">
                         <h1 id="landing-zh">臺北市內湖區新湖國民小學</h1>
                         <h2 id="landing-eng">Taipei Municipal Xinhu Elementary School</h2>
@@ -230,7 +233,7 @@
                 <div id="about-cores" class="row">
                     <div class="col-md-4">
                         <div class="card">
-                            <img class="card-img-top" src="src/home/3_bot1.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="src/home/safe.jpg" alt="Card image cap">
                             <div class="card-body text-center text-md-left">
                                 <h5 class="card-title">安全</h5>
                                 <p class="card-text ready-to-appear2">以「安全」為氛圍，創新分享。</p>
@@ -244,7 +247,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card">
-                            <img class="card-img-top" src="src/home/3_bot2.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="src/home/happy.jpg" alt="Card image cap">
                             <div class="card-body text-center text-md-left">
                                 <h5 class="card-title">快樂</h5>
                                 <p class="card-text ready-to-appear2">
@@ -260,7 +263,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card">
-                            <img class="card-img-top" src="src/home/3_bot3.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="src/home/excellent.jpg" alt="Card image cap">
                             <div class="card-body text-center text-md-left">
                                 <h5 class="card-title">卓越</h5>
                                 <p class="card-text ready-to-appear2">以「卓越」為目標，創新策略。</p>
@@ -442,7 +445,9 @@
                         <h1 class="pb-3">新湖校史</h1>
                         <!-- Content -->
                             <a href="src/home/新湖20周年專刊.pdf" download="新湖20周年專刊.pdf">新湖20周年專刊</a><br>
-                            <a href="src/home/新湖30周年專刊.pdf" download="新湖30周年專刊.pdf">新湖30周年專刊</a><br><br>
+                            <a href="src/home/新湖30周年專刊.pdf" download="新湖30周年專刊.pdf">新湖30周年專刊</a><br>
+                            <a href="src/home/新湖110、111學年全校教職員團照.pdf" download="新湖110、111學年全校教職員團照.pdf">新湖110、111學年全校教職員團照</a><br>
+                        <br>
                         <h4>建校源起</h4>
                         <p class="ready-to-appear2">內湖區環境優美自民國66年解除禁建，建築業蓬勃興起人口劇增，從民國57年之四萬餘人增至民國76年之十七萬餘人，以致區內學校容量不足以容納驟增之學童，乃有興建本校之議。<br/>
                             民國75年完成土地徵收作業，76年初辦理相關地上物拆遷補償作業，並於當年年底完成校舍徵圖。民國76年7月3日奉臺北市政府核定成立「新湖國小籌備處」並核派賴添福先生於民國76年8月11日出任籌備處主任。籌備處辦公室設在松山區三民國小。民國76年9月16日恭請臺北市政府教育局程督學貞樸主持掛牌儀式，校舍工程於78年發包及開工，80年初土木及水電工程陸續完工。歷任校長致力追求教育品質的提昇，逐年擴充學校各項軟硬體設施，陸續充實視聽教學及電腦教學設備，完成音樂、美勞、科學教室整修，廁所整修、裝設戶外球場夜間照明、學童午餐配膳室、午餐電梯及裝設改善航空噪音的隔音門窗及空調設備、永續校園太陽能路燈暨雨水回收澆灌設施、操場跑道球場及其周邊相關設施修建工程設施等。
