修改校長字體

--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
                                 <br/>所以必須指導孩子如何學習
                             
                                 </p>
-                                <footer class="blockquote-footer">
-                                    <cite title="Source Title">校長 郭添財</cite>
+                                <footer class="blockquote-footer">校長 郭添財
+                                    <cite title="Source Title"></cite>
                                 </footer>
                             </blockquote>
                         </div>
